fixed gap between navbar and page top

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
+  margin: 0px;
 }
 
 a.btn{ 
@@ -201,6 +202,7 @@ a.btn{
   background-color: rgba(0, 0, 0);
   overflow: visible;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: relative;
 }
 
 /* Style the links inside the navigation bar */
